--- a/.github/workflows/tagpr.yaml
+++ b/.github/workflows/tagpr.yaml
@@ -13,4 +13,4 @@ jobs:
       - name: push
         shell: bash
         run: |
-          git push origin main --tag && goreleaser --clean
+          git push origin main --tag
