--- a/.github/workflows/tagpr.yaml
+++ b/.github/workflows/tagpr.yaml
@@ -13,4 +13,8 @@ jobs:
       - name: push
         shell: bash
         run: |
+          echo 'deb [trusted=yes] https://repo.goreleaser.com/apt/ /' | sudo tee /etc/apt/sources.list.d/goreleaser.list
+          apt update
+          apt install -y goreleaser
           git push origin main --tag
+          
