--- a/.github/workflows/tagpr.yaml
+++ b/.github/workflows/tagpr.yaml
@@ -20,6 +20,8 @@ jobs:
     needs: tagpr
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: push
         shell: bash
         run: |
